2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/reporting.ajax.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/graph_builder.main.php
	 godmode/reporting/reporting_builder.php
	 godmode/reporting/reporting_builder.item_editor.php: Several fixes 
	 in metaconsole reports.

2012-04-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/menu.php,
	godmode/menu.php: Fixed an error printing extensions in new menus.

2012-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.controls.js
	include/javascript/pandora.js
	include/functions_agents.php
	operation/agentes/ver_agente.php
	godmode/groups/group_list.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_delete_modules.php
	godmode/massive/massive_delete_alerts.php
	godmode/massive/massive_edit_modules.php
	godmode/massive/massive_add_action_alerts.php: Improve
	several massive operations merged from trunk

2012-04-09 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: cleaned source code style.
	
	* extensions/update_pandora,
	extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php: moved this files into the
	extension update_manager.

	* extensions/update_manager/main.php: added hook (as a tab) the 
	"update_pandora".

2012-04-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reports.php: Fixed "forecating"
	typo error merged from trunk

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php, extensions/update_pandora.php:
	started to join to the openupdatemanager and some fixeds.

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,