@@ -1,5 +1,9 @@
 2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* godmode/reporting/reporting_builder.item_editor.php: 
+
+2012-04-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* include/ajax/reporting.ajax.php
 	 godmode/reporting/reporting_builder.list_items.php
 	 godmode/reporting/graph_builder.main.php
